2008-04-27  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:               Improved the support for cell editing with
	* scripts/tablelistEdit.tcl: a word- or char-wrapped text widget.
	* doc/tablelistTkCore.html:

2008-04-26  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistEdit.tcl: Added supprt for cell editing with a word-
	* doc/tablelistTkCore.html   wrapped text widget when appropriate.

	* scripts/tablelistBind.tcl:   Minor improvements.
	* scripts/tablelistWidget.tcl:

2008-04-22  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl: Small improvements related to the header
	  labels and separators.

2008-04-21  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:               Improved the tablelist widget's appearance
	* scripts/tablelistUtil.tcl: when the header labels are not shown.

2008-04-20  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/tablelist.html: Minor correction.

2008-04-20  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/styles.png: Updated the screenshot.

	* ../../examples/tablelist/styles_tile.tcl: Minor improvement.

2008-04-20  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt: Corrected a small typo.

2008-04-15  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistConfig.tcl: Improvements related to multi-line
	* scripts/tablelistUtil.tcl:   elements.

	* scripts/tclIndex: Newly generated.

2008-04-13  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/tablelist.html:        Expanded the tabs to spaces.
	* doc/tablelistBinding.html:
	* doc/tablelistThemes.html:
	* doc/tablelistWidget.html:

2008-04-12  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:                          Bumped the version number to 4.9;
	* *.txt:                          updated the Copyright lines; new
	* scripts/*.tcl:                  -wrap column configuration option;
	* doc/tablelist.html:             new -stretchwindow cell configuration