@@ -6,7 +6,7 @@
 
 package require Tcl 8
 package require Tk  8
-package require -exact tablelist::common 4.9
+package require -exact tablelist::common 4.9.1
 
 package provide Tablelist $::tablelist::version
 package provide tablelist $::tablelist::version
