@@ -9,7 +9,7 @@ package require Tk  8.4
 if {$::tk_version < 8.5 || [regexp {^8\.5a[1-5]$} $::tk_patchLevel]} {
     package require tile 0.6
 }
-package require -exact tablelist::common 4.9
+package require -exact tablelist::common 4.9.1
 
 package provide Tablelist_tile $::tablelist::version
 package provide tablelist_tile $::tablelist::version
